<b><u> v1.04, xx.10.2015</b></u>
<font color=#FF8C00>&#9830;</font> Install: Don't use detachedPortraits and Powerbar. (Conflict with a BenikUI Layout)
<font color=#FF8C00>&#9830;</font> Install: Remove AddOnSkins from the Installation Process. Now it has its own File.
<font color=#FF8C00>&#9830;</font> Install: Use Blizzard styled Close Buttons. (Credit Blazeflack)

<b><u> v1.03, 18.10.2015</b></u>
<font color=#FF8C00>&#9830;</font> Install: Fix an Install error.

<b><u> v1.02, 18.10.2015</b></u>
<font color=#FF8C00>&#9830;</font> Install: Don't use overlayed Portrait for Player-/ TargetFrame anymore.
<font color=#FF8C00>&#9830;</font> Install: Adjust Player-/ Target-/ ToT-/ PartyFrames Height.
<font color=#FF8C00>&#9830;</font> Install: Adjust Powerbar Height on all Unitframes.
<font color=#FF8C00>&#9830;</font> Install: Adjust Settings of Party Portraits, as its now part of ElvUI.
<font color=#FF8C00>&#9830;</font> GameMenu: Delete libAnim. Use the ElvUI default.
<font color=#FF8C00>&#9830;</font> Convert ClassIcons to blp. (Credits Benik)

<b><u> v1.01, 13.10.2015</b></u>
<font color=#FF8C00>&#9830;</font> GameMenu: Follow BenikUIs new classIcons for my GameMenu. Credits: <a href="http://addorin.deviantart.com/gallery/43689290/World-of-Warcraft-Class-Logos">ADDOriN @DevianArt</a>
<font color=#FF8C00>&#9830;</font> Options: Changed a bit the Code for the Options.
<font color=#FF8C00>&#9830;</font> Install: Adjust GroupFame Layout to fit with BenikUI EmptyBars.
<font color=#FF8C00>&#9830;</font> Misc: Follow ElvUI Changes use SetFormattedText instead of SetText(format...
<font color=#FF8C00>&#9830;</font> Misc: Minor Bugfixes.

<b><u> v1.0, 06.10.2015</b></u>
<font color=#FF8C00>&#9830;</font> Initial Release.